<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ranguro.technicalsupportmanager.SignUpActivityFragment">



    <EditText
        android:id="@+id/field_firstname"
        android:hint="@string/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/field_lastname"
        android:hint="@string/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/field_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/field_phone"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/field_access_type"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/permissions"/>

    <Button
        android:id="@+id/btn_next_sign_up"
        android:text="@string/btn_next_sign_up"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="nextSignUp"/>

</LinearLayout>
