<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ranguro.technicalsupportmanager.AddTaskActivityFragment">

    <!--
     Title, description, createdAt, Deadline (creator**), priority, status, attendants;
     -->


    <EditText
        android:id="@+id/field_task_title"
        android:hint="@string/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/field_task_description"
        android:hint="@string/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/field_task_deadline"
        android:hint="@string/task_deadline"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/spinner_task_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</LinearLayout>
