
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/task_details_container"
    tools:context="com.example.ranguro.technicalsupportmanager.TaskManagerDetailsActivityFragment">

    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/label_task_detail_status"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp">
            <TextView
                android:id="@+id/field_task_detail_description"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="Instalacion de computadoras"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/deadline_label"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/field_task_detail_deadline"
                    android:layout_weight="1"
                    android:text="21/09/2015"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/priority_label"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/field_task_detail_priority"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">

        <TextView
            android:text="Add assistant to task"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15sp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/field_task_attendant_add"
            android:layout_marginTop="12dp"
            android:hint="Type name of the assistant"
            android:drawableRight="@android:drawable/ic_input_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:padding="7dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
            android:text="@string/attendants_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15sp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_task_attendants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>


        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>










